--- a/org/colloquium/ocene.org
+++ b/org/colloquium/ocene.org
@@ -62,19 +62,19 @@
 
   |   |        br. | ime i prezime       | python | clojure | smalltalk | haskell | ukupno |
   |---+------------+---------------------+--------+---------+-----------+---------+--------|
-  |   |          1 | Ivan Radosavljević  |    100 |     100 |           |         | 50.000 |
-  |   |          2 | Ivana Tešanović     |     70 |      80 |           |         | 37.500 |
-  |   |          3 | Branislav Lukić     |     40 |      60 |           |         | 25.000 |
-  |   |          4 | Jovan Popović       |     70 |      40 |           |         | 27.500 |
-  |   |          5 | David Dražić        |    100 |     100 |           |         | 50.000 |
-  |   |          6 | Marko Purić         |     50 |      60 |           |         | 27.500 |
-  |   |          7 | Mladen Vidović      |    100 |     100 |           |         | 50.000 |
-  |   |          8 | Aleksandra Mitrović |    100 |     100 |           |         | 50.000 |
-  |   |          9 | Dejan Jovanović     |     40 |      60 |           |         | 25.000 |
+  |   |          1 | Ivan Radosavljević  |    100 |     100 |       100 |         | 75.000 |
+  |   |          2 | Ivana Tešanović     |     70 |      80 |        75 |         | 56.250 |
+  |   |          3 | Branislav Lukić     |     40 |      60 |        65 |         | 41.250 |
+  |   |          4 | Jovan Popović       |     70 |      40 |        38 |         | 37.000 |
+  |   |          5 | David Dražić        |    100 |     100 |       100 |         | 75.000 |
+  |   |          6 | Marko Purić         |     50 |      60 |        75 |         | 46.250 |
+  |   |          7 | Mladen Vidović      |    100 |     100 |       100 |         | 75.000 |
+  |   |          8 | Aleksandra Mitrović |    100 |     100 |       100 |         | 75.000 |
+  |   |          9 | Dejan Jovanović     |     40 |      60 |        50 |         | 37.500 |
   | ^ |     brStud |                     |        |         |           |         |        |
   |---+------------+---------------------+--------+---------+-----------+---------+--------|
-  |   |   Prosečno |                     | 74.444 |  77.778 |     0.000 |   0.000 | 38.056 |
-  |   |   Položilo | 0                   |        |         |           |         |        |
+  |   |   Prosečno |                     | 74.444 |  77.778 |    78.111 |   0.000 | 57.583 |
+  |   |   Položilo | 5                   |        |         |           |         |        |
   | ^ |            | polozilo            |        |         |           |         |        |
-  |   | Prolaznost | 0.000               |        |         |           |         |        |
+  |   | Prolaznost | 0.556               |        |         |           |         |        |
   #+TBLFM: @>>>$3=vcount(map(<if(gt(#1, 55), 1, [])>, @2$8..@10$8))::@>>>>$8=vmean(@2$8..@10$8);%.3f::@>>>>$7=vmean(@2$7..@10$7);%.3f::@>>>>$6=vmean(@2$6..@10$6);%.3f::@>>>>$5=vmean(@2$5..@10$5);%.3f::@>>>>$4=vmean(@2$4..@10$4);%.3f::@>$3=$polozilo/$brStud;%.3f::@2$2..@10$2=@# - 1::@2$8..@10$8=vsum($4..$7)/4;%.3f
